# data-snapshot-annotation

./: .gitignore  README.md  create_tasks.py  create_tasks_with_prelabeling.py  docker-compose.yml  extract_pages.py  labeling_interface_template.xml  pyproject.toml  requirements-evaluation.txt  requirements.txt
.agents/rules/: coding-standards.md
.agents/skills/create-adapter/: SKILL.md
docs/: benchmark_paper_draft.md  data-snapshot-eval-v1.3.schema.json  hf_dataset_card.md  project_context.md
notebooks/: doclayout-yolo_demo.ipynb  explore_annotation_results.ipynb  filter_metadata.ipynb  find_minimum_meaningful_area.ipynb  metrics_viewer.ipynb  sdk_demo.ipynb  split_preds.ipynb  yolov26_demo.ipynb
notebooks/demos/: hf_load_dataset_demo.ipynb
notebooks/schema_discovery/: results_viewer.ipynb  schema_discovery.ipynb  schema_discovery.py  system_message.md  user_message.md
notebooks/utils/paper_docs/: count_pages_with_snapshots.ipynb
notebooks/working/characterization/: 4o-mini_pipeline-refugee.ipynb  4o-mini_pipeline.ipynb  characterization.py  cost_viewer.ipynb  jsonl_viewer.ipynb
src/: constants.py  evaluate_model.py  extract_pages.py  extract_snapshots.py  labelstudio.py  tfid.py
src/data_snapshot/annotation/: create_tasks_with_prelabeling.py
src/dsa/: constants.py  evaluate_model.py  extract_snapshots.py  labelstudio.py  ls_helpers.py  utils.py  visualize_pages.py
src/dsa/adapters/: doclayoutyolo.py  labelstudio.py  layoutlmv3.py  tfid.py  yolo11.py  yolo26.py  yolov11.py  yolov26.py
src/models/: tfid.py
src/scripts/: batch_runner.py  combine_pred_files.py  export_project.py  merge_batch_preds.py
tests/: test_adapters.py  test_evaluate_model.py
tests/data/: chatgpt3.json  doclayout-yolo.json  doclayoutyolo_ref.json  evaluate_model_gt.json  evaluate_model_pred.json  evaluate_model_ref.json  ground_truth.json  report_chatgpt3.json  tfid-large.json  yolo11_ref.json  yolo26_ref.json
