[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "data-snapshot-annotation"
version = "0.1.0"
description = "Label Studio for data-snapshot"
requires-python = "==3.10.19"
readme = "README.md"

dependencies = [
    "pdf2image==1.17.0",
    "tqdm==4.67.1",
]


[project.optional-dependencies]
evaluation = [
    "transformers==4.46.0",
    "torch==2.9.1",
]
doclayout_yolo = [
    "doclayout-yolo",
    "huggingface-hub",
]
dev = [
    "data-snapshot-annotation[evaluation]",
    "pytest==9.0.2",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests/"]
