[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "data-snapshot-annotation"
version = "0.1.0"
description = "Label Studio and evaluation framework for data snapshot detection in PDF documents"
requires-python = ">=3.10,<3.11"
readme = "README.md"

dependencies = [
    "pdf2image==1.17.0",
    "tqdm==4.67.1",
]


[project.optional-dependencies]
tfid = [
    "transformers==4.46.0",
    "torch==2.9.1",
]
doclayout_yolo = [
    "doclayout-yolo",
    "huggingface-hub",
]
yolo11 = [
    "huggingface-hub",
    "ultralytics",
]
yolo26 = [
    "huggingface-hub",
    "ultralytics",
]
viz = [
    "numpy",
    "opencv-python",
]
dev = [
    "data-snapshot-annotation[tfid,doclayout_yolo,viz,yolo26]",
    "pytest==9.0.2",
    "black==25.1.0",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests/"]
